fixes overflow on code-blocks

--- a/assets/sass/_bilberry-hugo-theme.scss
+++ b/assets/sass/_bilberry-hugo-theme.scss
@@ -34,6 +34,7 @@
             padding: 0.75em;
             font-size: 0.9em;
 
+            overflow-x: scroll;
             white-space: pre;
             background: #3f3f3f;
             color: #dcdcdc;
